--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -1,5 +1,5 @@
 {% load bootstrap4 %}
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -51,28 +51,3 @@
 </main>
 </body>
 </html>
-
-
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Title</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--    <p>-->
-<!--        <a href="{% url 'learning_logs:index' %}">Learning Log</a> —-->
-<!--        <a href="{% url 'learning_logs:topics' %}">Topics</a>-->
-
-<!--        {% if user.is_authenticated %}-->
-<!--            Hello, {{ user.username }}.-->
-<!--            <a href="{% url 'users:logout' %}">log out</a>-->
-<!--        {% else %}-->
-<!--            <a href="{% url 'users:register' %}">Register</a> - -->
-<!--            <a href="{% url 'users:login' %}">log in</a>-->
-<!--        {% endif %}-->
-
-<!--    </p>-->
-<!--    {% block content %}{% endblock content %}-->
-<!--</body>-->
-<!--</html>-->
